# atacadao-nightmare

./: .gitignore  .gitmodules  README.md  clang-format  compile_dep.sh  meson.build
assets/maps/: meson.build  test.map  test.mtl  test.pts
assets/maps/autosave/: test.1.map  test.2.map
assets/maps/test/: test.bsp  test.map  test.mtl
assets/maps/test/autosave/: test.1.map  test.2.map  test.3.map  test.4.map  test.5.map  test.6.map  test.7.map
assets/models/Ada Wong/: PAD1.dae
assets/models/Beat/: Beat.mtl
assets/models/deku_tree/: greatdekutree.mtl
include/: billboard.hpp  camera.hpp  game.hpp  input.hpp  map.hpp  menu.hpp  mesh.hpp  model.hpp  physics.hpp  physx_utils.hpp  player.hpp  render.hpp  shape.hpp  state.hpp
shaders/: billboard.glsl  default.glsl  shape.glsl
source/: base_impl.c  billboard.cpp  camera.cpp  game.cpp  jolt_impl.cpp  lightmapper_impl.c  main.cpp  map.cpp  menu.cpp  mesh.cpp  meson.build  model.cpp  physics.cpp  player.cpp  render.cpp  shape.cpp  sokol_impl.c
